fix carouselhover on mobile

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -181,7 +181,6 @@ nav {
     input {
       min-width: auto;
     }
-
   }
 
   .nav__links {
@@ -308,7 +307,7 @@ nav {
     margin: 2rem 0;
 
     h4 {
-      font-weight: 500;
+      font-weight: 900;
       padding: 0 1rem;
       margin: 1rem 0;
     }
@@ -323,16 +322,18 @@ nav {
 
       .active {
         color: @lightGreen;
-        font-weight: 400;
+        font-weight: 500;
       }
 
       a {
         font-weight: 300;
+        font-size: 0.9rem;
       }
 
       span {
         color: #aaaaaa;
-        font-weight: 100;
+        font-weight: 400;
+        font-size: 0.8rem;
       }
       .badge {
         background-color: @lightGreen;
